precompiles/utils/macro/tests/precompile/compile-fail/evm-data/no-output.stderr
error: A precompile method must have a return type of `EvmResult<_>` (exposed by `precompile_utils`)
  --> tests/precompile/compile-fail/evm-data/no-output.rs:24:2
   |
24 |     fn foo(test: &mut impl PrecompileHandle) {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
